--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ body {
 /* HEADER */
 
 .header {
-    background-image: url("images/index/Intro-index.png");
     background-repeat: no-repeat;
     background-size: 100%;
+}
+.header-main {
+    background-image: url("images/index/Intro-index.png");
 }
 .fixed-block {
     position: sticky;
@@ -29,6 +31,7 @@ body {
     font-size: 16px;
     font-weight: 600;
     margin-right: 2px;
+    transition: 800ms ease-in-out;
 }
 .spans {
     margin-top: 2px;
@@ -36,28 +39,29 @@ body {
     width: 18px;
     height: 12px;
 }
-.nav-menu span {
+.span {
     height: 1px;
     background-color: #fff;
     position: absolute;
     right: 0;
     left: 0;
-    transition: .25s ease-in-out;
+    transition: 800ms ease-in-out;
 }
-.nav-menu span:first-child {
+.nav-menu .span:first-child {
     top: 0;
 }
-.nav-menu span:nth-child(2) {
+.nav-menu .span:nth-child(2) {
     top: 5px;
 }
-.nav-menu span:last-child {
+.nav-menu .span:last-child {
     top: 10px;
 }
 .menu {
     background-color: rgba(36, 47, 53, 0.9);
     position: absolute;
-    top: 45px;
+    top: 60px;
     right: 0;
+    transition: 800ms ease-in-out;
 }
 .menu a {
     color: #fff;
@@ -84,31 +88,11 @@ body {
 .header-h1 span {
     font-style: italic;
 }
-@media (max-width: 767px) {
-    .header {
-        background-image: url("images/index/Intro\ index-mobile.png");
-        height: 450px;
-    }
-    .fixed-block {
-        background-color: rgba(36, 47, 53, 0.7);
-        padding-right: 0;
-        padding-top: 0;
-    }
-    .navigation {
-        background-color: rgba(36, 47, 53, 0.9);
-        position: relative;
-    }
-    .nav-menu {
-        width: 45px;
-        justify-content: center;
-    }
-    .menu-word {
-        display: none;
-    }
-    .header-h1 {
-        font-size: 40px;
-        line-height: 48px;
-    }
+.nav-menu-word-click {
+    color: rgba(36, 47, 53, 0.9);
+}
+.nav-menu-span-click {
+    background-color: rgba(36, 47, 53, 0.9);
 }
 
 /* Main */
@@ -149,6 +133,8 @@ body {
     font-size: 14px;
     font-weight: 300;
     color: #021725;
+    line-height: 57px;
+    text-align: center;
     margin-bottom: 80px;
     height: 57px;
     width: 238px;
@@ -203,4 +189,281 @@ body {
     line-height: 20px;
     margin-top: 36px;
     margin-bottom: 30px;
+}
+.article {
+    margin-bottom: 80px;
+}
+.article-text {
+    background-color: #f9f9f9;
+    padding: 35px;
+    color: #505d68;
+}
+.article-text time {
+    font-size: 13px;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+.article-title {
+    color: #505d68;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-weight: 400;
+}
+.article-text p {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    margin-bottom: 60px;
+}
+.article-button {
+    margin-bottom: 25px;
+    height: 45px;
+    width: 125px;
+    line-height: 45px;
+}
+.map {
+    background-image: url("images/index/index\ img\ \(13\).png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    height: 295px;
+}
+.contacts {
+    background-color: #f9f9f9;
+    display: flex;
+    flex-wrap: wrap;
+    color: #505d68;
+}
+.contact-text {
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.contact-text h6 {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 13px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.contact-text p {
+    font-size: 19px;
+    font-weight: 300;
+    line-height: 40px;
+}
+.laptop {
+    display: block;
+}
+.mobile {
+    display: none;
+}
+/* Footer */
+.footer {
+    background-color: #eeeeee;
+    height: 100px;
+    display: flex;
+    align-items: center;
+}
+.footer p {
+    font-size: 16px;
+    color: #505d68;
+    font-weight: 300;
+}
+
+@media (max-width: 767px) {
+    .header {
+        background-image: url("images/index/Intro\ index-mobile.png");
+        height: 450px;
+    }
+    .fixed-block {
+        background-color: rgba(36, 47, 53, 0.7);
+        padding-right: 0;
+        padding-top: 0;
+    }
+    .navigation {
+        background-color: rgba(36, 47, 53, 0.9);
+        position: relative;
+    }
+    .nav-menu {
+        width: 45px;
+        justify-content: center;
+    }
+    .menu-word {
+        display: none;
+    }
+    .nav-menu-span-click {
+        background-color: rgba(255, 255, 255, 0.3);
+    }
+    .menu {
+        top: 45px;
+    }
+    .header-h1 {
+        font-size: 40px;
+        line-height: 48px;
+    }
+    .article-block {
+        flex-direction: column;
+    }
+    .article-block .img {
+        width: 100%;
+    }
+    .block-worker img {
+        height: 225px;
+    }
+    .map {
+        height: 125px;
+    }
+    .mobile {
+        display: block;
+    }
+    .laptop {
+        display: none;
+    }
+    .footer-block {
+        flex-direction: column;
+    }
+    .footer-text {
+        margin-bottom: 15px;
+    }
+}
+
+
+/* PAGE ABOUT */
+
+/* Header */
+
+.header-about {
+    background-image: url("images/about/Intro-about.png");
+}
+
+/* Main */
+
+.text-about {
+    margin-top: 160px;
+}
+.services-block {
+    width: 100%;
+}
+.img-service {
+    padding: 0;
+}
+.img-service img {
+    width: 100%;
+}
+.services {
+    background-color: #f9f9f9;
+    flex-direction: column;
+    padding: 55px;
+}
+.text-services p, .text-services ul {
+    color: #505d68;
+}
+@media (min-width: 768px) {
+    .services-block {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .img-service {
+        width: 50%;
+    }
+    .text-services {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+    .text-services p, .text-services ul {
+        width: 210px;
+    }
+}
+
+/* BLOG PAGE */
+
+/* Header */
+
+@media (max-width: 767px) {
+    .header-blog {
+        height: 45px;
+        background-image: none;
+    }
+}
+.container-blog-main {
+    background-color: #f9f9f9;
+}
+.articles {
+    display: flex;
+    flex-wrap: wrap;
+}
+.articles article {
+    background-color: #fff;
+    padding: 30px 15px;
+}
+.articles article:first-child {
+    margin-bottom: 60px;
+}
+.articles img {
+    width: 100%;
+}
+.blog-title {
+    font-weight: 300;
+    font-size: 30px;
+    color: #000000;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.articles time {
+    color: #d3b000;
+    font-size: 15px;
+    font-weight: 300;
+}
+.blog-text {
+    font-size: 16px;
+    font-weight: 400;
+    color: #021725;
+    line-height: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.nav-block-blog {
+    display: flex;
+    flex-direction: column;
+}
+.blog-nav {
+    flex-direction: column;
+    margin-bottom: 60px;
+}
+.blog-nav a {
+    font-size: 16px;
+    font-weight: 300;
+    color: #021725;
+    font-style: italic;
+    line-height: 30px;
+}
+.nav-title-blog {
+    font-size: 23px;
+    font-weight: 300;
+    color: #021725;
+    border-bottom: 3px solid #d3b000;
+    padding-bottom: 10px;
+    margin-bottom: 40px;
+}
+.project {
+    width: 100%;
+}
+.load-more {
+    justify-content: center;
+}
+.load-more .read-more {
+    margin-top: 60px;
+}
+
+@media (min-width: 768px) {
+    .header-blog {
+        background-image: url("images/blog/Intro-blog.png");
+    }
+    .container-blog-main {
+        margin: 60px auto;
+        padding: 65px;
+    }
 }
